# hasura

./: Cargo.toml
api/: Cargo.toml
api/src/: common.rs  conditions.rs  delete.rs  error.rs  helpers.rs  insert.rs  lib.rs  macros.rs  query.rs  request.rs  serializer.rs  update.rs  util.rs
derive/: Cargo.toml
derive/src/: attr.rs  attributes.rs  fields.rs  generate.rs  info.rs  lib.rs  strip.rs
expand/: Cargo.toml
expand/src/: main.rs
src/: builder.rs  common.rs  delete.rs  error.rs  fetch.rs  fetcher.rs  helpers.rs  insert.rs  lib.rs  macros.rs  request.rs  segments.rs  serializer.rs  traits.rs  update.rs  util.rs
src/attributes/: conditions.rs  fields.rs  mod.rs  on_conflict.rs  order_by.rs
src/queries/: delete.rs  delete_by_pk.rs  insert.rs  insert_one.rs  mod.rs  query.rs  query_by_pk.rs  update.rs  update_by_pk.rs
src/utils/: builder.rs  mod.rs  serializer.rs
tests/: Cargo.toml  main.rs  quiz.rs
tests/src/: main.rs
wasm/: Cargo.toml  index.html
wasm/src/: main.rs
