[package]
name = "hasura"
version = "0.2.0"
edition = "2021"

[features]
timing = ["log", "wasm-timer"]
default = []

[workspace]
members = ["derive", "wasm", "expand"]

[dev-dependencies]
tokio = { version = "1.20", features = ["full"] }

[dependencies]
derive = { path = "derive" }

serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
reqwest = { version = "0.11" }

log = { version = "0.4", optional = true }
wasm-timer = { version = "0.2", optional = true }

either = { version = "1.8", features = ["serde"] }
itertools = "0.10"
thiserror = "1.0"
chrono = "0.4"