[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"

log = "0.4"
#reqwest = "0.11"
gloo-net = { version = "0.2", default_features = false, features = ["http"] }
wasm-timer = "0.2"

derive_more = "0.99"
itertools = "0.10"
thiserror = "1.0"

derive_builder = "0.11.1"
chrono = { version = "0.4" }